solve the options wont change line if the option is too long

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -90,6 +90,7 @@ section h2 {
 .option {
   width: 88%;
   margin: 10px;
+  white-space: normal;
 }
 
 .phone {
